# moises-light

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pypi.yml
contrib/zfturbo/models/: moises_light_model.py
moises_light/: __init__.py  bottleneck.py  modules.py  moises_light.py  rope_transformer.py
tests/: test_moises_light.py
